--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,28 @@
+----------
+Samuel
+----------
+
 -> Ajouter des matchs via fichier csv
--> renvoyer une erreur à l'utilisateur lorsqu'il n'y a pas de connection
+-> Générer les equipes 
+-> renvoyer une erreur à l'utilisateur lorsqu'il n'y a pas de connection. Ex : lors de la modification des disponibilités
 
 
+----------
+Ibrahim
+----------
 
 -> Créer page utilisateur (niveau 1)
 	-> Afficher la liste des matchs joués de l'utilisateur
 	-> Créer une fonction calculer le classement virtuel
+
+
+
+
+
+
+------------------
+Erreurs sur la DB
+------------------
+
+-> Insertion de plusieurs interclub à la même date
+-> Insertion de plusieurs rencontres pour la même personne au même interclub
